tests/metallb/resource-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

  name: example
  # namespace: kube-verify
spec:
  rules:
    # - host: examplecar.com
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: example-service
    #           servicePort: 8081
    #         path: "/"

    - host: api.examplecar.com
      http:
        paths:
          - backend:
              serviceName: example-service
              servicePort: 8082
            path: "/"
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #     - hosts:
  #         - www.example.com
  #       secretName: example-tls
