tests/metallb/testLB.yaml
# https://opensource.com/article/20/7/homelab-metallb
apiVersion: v1
kind: Namespace
metadata:
  name: kube-verify

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-verify
  # namespace: kube-verify
  labels:
    app: kube-verify
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-verify
  template:
    metadata:
      labels:
        app: kube-verify
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    metallb.universe.tf/address-pool: production-public-ips
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
